[package]
name = "doppio"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
zbus = "5"
tokio = { version  = "1", features = [ "rt-multi-thread", "macros", "net", "io-util" ] }
futures = "0.3"
futures-locks = "0.7"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
