[package]
name = "doppio"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
zbus = "5"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["fs"] }
